--- a/src/encoded/static/scss/encoded/modules/_case-submission.scss
+++ b/src/encoded/static/scss/encoded/modules/_case-submission.scss
@@ -87,7 +87,7 @@ body[data-current-action="add"] {
                     //background-color: #fff;
                     > .row > .number-indicator > span {
                         //background-color: #98ec64;
-                        background-color: $brand-success;
+                        background-color: $success;
                     }
                 }
 
