--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -282,7 +282,7 @@ body.is-full-screen {
 		//line-height: 0;
 		text-align: center;
 		overflow: hidden;
-		border-top: 1px solid darken($navbar-background-color, 10%);
+		/* border-top: 1px solid darken($navbar-background-color, 10%); */
 		//@include filter-gradient(#ffffff, #f8f8f8, vertical);
 
 
