--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -486,19 +486,52 @@
 
 	.homepage-contents {
 		min-height: calc(100vh - 130px);
-		background: rgb(35,83,115);
-		background: -moz-linear-gradient(120deg, rgba(7,30,34,1) 0%, rgba(24,73,98,1) 34%, rgba(35,83,115,1) 57%, rgba(14,43,62,1) 83%, rgba(8,29,43,1) 100%);
-		background: -webkit-linear-gradient(120deg, rgba(7,30,34,1) 0%, rgba(24,73,98,1) 34%, rgba(35,83,115,1) 57%, rgba(14,43,62,1) 83%, rgba(8,29,43,1) 100%);
-		background: linear-gradient(120deg, rgba(7,30,34,1) 0%, rgba(24,73,98,1) 34%, rgba(35,83,115,1) 57%, rgba(14,43,62,1) 83%, rgba(8,29,43,1) 100%);
-	
-		#homepage-login-container .auth0-lock-widget {
-			box-shadow: 0 0 25px -7px #000;
-			.auth0-lock-header-welcome {
-				padding-top: 15px;
-				padding-bottom: 12px;
-				// .auth0-lock-header-logo {
-				// 	display: none;
-				// }
+		background: rgba(232,242,252);
+
+		.cgap-welcome,
+		.cgap-tagline {
+			color: $primary-dark;
+			max-width: 570px;
+		}
+
+		.cgap-welcome {
+			font-size: 2.2em;
+			letter-spacing: .05em;
+		}
+
+		.cgap-logo-wrapper.img-container {
+			border: 2px dotted $primary-dark;
+			border-radius: 100%;
+			padding: 10px;
+		}
+		
+		#homepage-login-container {
+			margin-top: 1.5625rem;
+
+			.auth0-lock-center {
+				padding: 0;
+				margin: 0;
+				.auth0-lock-widget {
+					box-shadow: 0px 10px 20px 3px rgba(33, 33, 33, 0.1);
+					.auth0-lock-header-bg.auth0-lock-blur-support {
+						display: none;
+					}
+				
+					.auth0-lock-header-welcome {
+						display: flex;
+						justify-content: center;
+						padding-top: 15px;
+						.auth0-lock-name {
+							color: $primary-dark;
+							border-bottom: 1px solid #eeeeee;
+							width: 75%;
+							padding-bottom: 5px;
+						}
+						.auth0-lock-header-logo {
+							display: none;
+						}
+					}
+				}
 			}
 		}
 	}
