--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -483,24 +483,31 @@
 	
 
 	// Guest view
+	.homepage-contents,
+	.homepage-contents>div {
+		min-height: calc(100vh - 130px);
+	}
 
 	.homepage-contents {
-		min-height: calc(100vh - 130px);
 		background: rgba(232,242,252);
 
-		.cgap-welcome,
+		>div {
+			background: url('/static/img/landing_page_hexagons.svg');
+			background-position: center;
+			background-repeat: repeat;
+		}
+
 		.cgap-tagline {
-			color: $primary-dark;
+			color: #1f445f;
 			max-width: 570px;
 		}
 
-		.cgap-welcome {
-			font-size: 2.2em;
-			letter-spacing: .05em;
+		.cgap-welcome>svg#a { 
+			max-width: 300px;
 		}
 
 		.cgap-logo-wrapper.img-container {
-			border: 2px dotted $primary-dark;
+			border: 2px dotted #1f445f;
 			border-radius: 100%;
 			padding: 10px;
 		}
@@ -517,7 +524,7 @@
 
 					.auth0-lock-widget {
 						box-shadow: 0px 10px 20px 3px rgba(33, 33, 33, 0.1);
-						
+
 						.auth0-lock-header-bg.auth0-lock-blur-support {
 							display: none;
 						}
