--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -493,8 +493,9 @@
 
 		>div {
 			background: url('/static/img/landing_page_hexagons.svg');
-			background-position: center;
+			background-position: top;
 			background-repeat: repeat;
+			background-size: cover;
 		}
 
 		.cgap-tagline {
@@ -525,24 +526,28 @@
 					.auth0-lock-widget {
 						box-shadow: 0px 10px 20px 3px rgba(33, 33, 33, 0.1);
 
-						.auth0-lock-header-bg.auth0-lock-blur-support {
-							display: none;
-						}
-					
-						.auth0-lock-header-welcome {
-							display: flex;
-							justify-content: center;
-							padding-top: 15px;
-							
-							.auth0-lock-name {
-								color: $primary-dark;
-								border-bottom: 1px solid #eeeeee;
-								width: 75%;
-								padding-bottom: 5px;
-							}
+						.auth0-lock-cred-pane-internal-wrapper {
+							height: unset;
 
-							.auth0-lock-header-logo {
+							.auth0-lock-header-bg.auth0-lock-blur-support {
 								display: none;
+							}
+						
+							.auth0-lock-header-welcome {
+								display: flex;
+								justify-content: center;
+								padding-top: 15px;
+								
+								.auth0-lock-name {
+									color: $primary-dark;
+									border-bottom: 1px solid #eeeeee;
+									width: 75%;
+									padding-bottom: 5px;
+								}
+	
+								.auth0-lock-header-logo {
+									display: none;
+								}
 							}
 						}
 					}
