Fixes for front page links

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -554,6 +554,13 @@
 				} 
 			}
 		}
+
+		.cgap-links>div.border-primary {
+			@include media-breakpoint-up(sm){
+				border-left: 1px solid;
+				border-right: 1px solid;
+			}
+		}
 	}
 
 
