Fix for disappearing SVG graphic on chrome/safari

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -505,6 +505,8 @@
 
 		.cgap-welcome>svg#a { 
 			max-width: 300px;
+			width: 280px;
+			min-width: 250px;
 		}
 
 		.cgap-logo-wrapper.img-container {
