Update svg class names

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -508,10 +508,11 @@
 			shape-rendering: geometricprecision;
 		}
 
-		.cgap-welcome>svg#a { 
+		.cgap-welcome>svg#cgap-welcome-svg {
 			max-width: 300px;
 			width: 280px;
 			min-width: 250px;
+			fill: #1f445f;
 		}
 
 		.cgap-logo-wrapper.img-container {
