--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1690,10 +1690,10 @@ i.status-indicator-dot {
 
 	.embedded-search-view-outer-container {
 
-		// (Stylistic) increase whitespace around this components/elems
+		// Stylistic adjustments
 		.above-results-table-row {
-			margin-top: 16px;
-			padding-bottom: 16px;
+			margin-top: 0px;
+			padding-bottom: 0px;
 		}
 
 	}
