--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1694,6 +1694,7 @@ i.status-indicator-dot {
 		.above-results-table-row {
 			margin-top: 0px;
 			padding-bottom: 0px;
+			border-top: 1px solid $gray-300;
 		}
 
 	}
