--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1606,12 +1606,13 @@ i.status-indicator-dot {
 			/* Filtering Tab Specific styles */
 			&#case-info\.filtering {
 				// Styling overrides specific to embedded search table results for Structural Variants in case filtering
-				.embedded-search-container .search-view-controls-and-results[data-search-item-type="StructuralVariantSample"] {
+				.embedded-search-container .search-view-controls-and-results[data-search-item-type="StructuralVariantSample"],
+				.embedded-search-container .search-view-controls-and-results[data-search-item-type="VariantSample"] {
 					.search-result-row.detail-closed .columns.result-table-row {
 						.search-result-column-block[data-field="display_title"][data-first-visible-column="true"] {
 							/* Temporarily removed detail expansion pane in JS col ext map until we get specs for it; adjust padding to accomodate */
 							/* important necessary to override default style (this is short term override/will be deleted soon so hopefully ok) */
-							padding-left: 18px !important;
+							padding-left: 12px !important;
 							.toggle-detail-button-container {
 								display: none;
 							}
