Move feedback button to top nav

--- a/src/encoded/static/scss/encoded/modules/_navbar.scss
+++ b/src/encoded/static/scss/encoded/modules/_navbar.scss
@@ -319,7 +319,8 @@ div#top-nav.navbar-fixed-top {
 
             > .navbar-nav {
                 
-                > a {
+                > a,
+                > button {
                     @include navbar-link-button-item;
                 }
 
