--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -1415,6 +1415,17 @@ i.status-indicator-dot {
 				}
 			}
 
+			/* Bioinformatics Tab Specific styles */
+			&#case-info\.bioinformatics {
+				.qcm-flag[data-flag="fail"] {
+					color: rgb(178, 67, 66);
+				}
+
+				.qcm-flag[data-flag="warn"] {
+					color: rgb(229, 149, 69);
+				}
+			}
+
 			/* Interpretation styles*/
 			&#case-info\.interpretation {
 				.card-header.section-header {
