Fix poster URLs + start class style stuff

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -706,6 +706,10 @@
 }
 
 
-
+// For the youtube embeds (currently only used on static sections)
+.youtube-embed-lazyload-poster {
+	background-size: auto;
+	background-repeat: no-repeat;
+}
 
 
