--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -708,8 +708,73 @@
 
 // For the youtube embeds (currently only used on static sections)
 .youtube-embed-lazyload-poster {
-	background-size: auto;
-	background-repeat: no-repeat;
+	// background-size: auto;
+	// background-repeat: no-repeat;
+	--aspect-ratio: 56.25%;
+	contain: content;
+	position: relative;
+	background-position: 50%;
+	background-size: cover;
+	cursor: pointer;
+	display: block;
+
+	::before {
+		content: "";
+		display: block;
+		position: absolute;
+		top: 0;
+		background-position: top;
+		background-repeat: repeat-x;
+		height: 60px;
+		padding-bottom: 50px;
+		width: 100%;
+		transition: all 0.2 cubic-bezier(0, 0, 0.2, 1);
+	}
+
+	> iframe {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	::after {
+		content: "";
+		display: block;
+	}
+
+	&:hover {
+		.youtube-embed-fake-play-btn {
+			background-color: red;
+			opacity: 1;
+		}
+	}
+
+	.youtube-embed-fake-play-btn {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 70px;
+		height: 46px;
+		background-color: #212121;
+		opacity: .8;
+		border-radius: 14%;
+		transform: translate3d(-50%, -50%, 0);
+		border: none;
+
+		:hover {
+			background-color: red;
+			opacity: 1;
+		}
+
+		::before {
+			content: "";
+			border-color: "transparent transparent transparent #ffffff";
+			border-width: 11px 0 11px 19px;
+			border-style: solid;
+		}
+	}
 }
 
 
