Set new var $facetlist-excluding

--- a/src/encoded/static/scss/encoded/_base.scss
+++ b/src/encoded/static/scss/encoded/_base.scss
@@ -112,6 +112,7 @@ $dark:          #343a40;
 // Extra Additions for CGAP:
 //$primary-dark: darken($primary, 15%);
 $primary-dark: #2b6088; //#0c5979;
+$facetlist-excluding: #450000;
 
 
 // Will be extended in bootstrap's _variables.scss with Bootstrap orig colors (warning, success, primary, etc).
