style: format the note text preview in new module

--- a/src/encoded/static/scss/style.scss
+++ b/src/encoded/static/scss/style.scss
@@ -46,4 +46,5 @@
         "encoded/modules/static-pages",
         "encoded/modules/slide-in-pane",
         "encoded/modules/workflow-visualization",
-        "encoded/modules/ingestion-submission";
+        "encoded/modules/ingestion-submission",
+        "encoded/modules/case-notes";
