--- a/src/encoded/static/scss/encoded/modules/_item-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_item-pages.scss
@@ -580,12 +580,15 @@ h3.submission-subtitle {
 
 	// Identifiers for saved and unsaved states of CaseView comments
 	// Saved note gray
-	&[data-status="saved"]:before {
+	&[data-status="note-saved"]:before {
 		color: #6C757D;
 	}
 	// Unsaved note red
-	&[data-status="unsaved"]:before {
+	&[data-status="note-unsaved"]:before {
 		color: #C41700;
+	}
+	&[data-status="note-dot-unsaved"]:before {
+		background-color: #C41700;
 	}
 
 
