--- a/src/encoded/static/scss/encoded/modules/_case-notes.scss
+++ b/src/encoded/static/scss/encoded/modules/_case-notes.scss
@@ -10,12 +10,24 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        position: relative;
 
         &-button {
             height: auto;
-            margin: auto;
+            margin: auto auto auto 10px;
             background-color: transparent;
             border: none;
+
+
+            .status-indicator-dot {
+                position:absolute;
+                
+                &::before {
+                    position: absolute;
+                    top: 0px;
+                    right: 0px;
+                }
+            }
         }
         &-text {
             width: 100%;
