- feat: change note icon outline when unsaved - feat: add latency warning on save

--- a/src/encoded/static/scss/encoded/modules/_case-notes.scss
+++ b/src/encoded/static/scss/encoded/modules/_case-notes.scss
@@ -90,5 +90,10 @@
         & > .form-control {
             font-size: 0.8rem;
         }
+
+        .warning {
+            color: #9FA7AE;
+            margin-top: 5px;
+        }
     }
 }
