- feat: update conditional for note indicator rendering - feat: add and format error text in UI

--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -451,5 +451,10 @@ body[data-pathname="/search/"]:not([data-current-action="add"]) {
           color: #9FA7AE;
           margin-top: 5px;
       }
+
+      .error {
+        margin-top: 5px;
+        text-align: left;
+      }
   }
 }
